--- a/src/Artists/artist_backend/.env
+++ b/src/Artists/artist_backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/yourdb?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://OxanaD:xFjvPo6HkNTmk8Gu@cluster0.iecxqdg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
