--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^16.5.0",
     "enlist": "^0.1.0",
     "express": "^5.1.0",
+    "leaflet": "^1.9.4",
     "mongoose": "^8.15.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.57.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
